--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -137,5 +137,8 @@
       }
     }
   },
-  "defaultProject": "frontend"
+  "defaultProject": "frontend",
+  "cli": {
+    "defaultCollection": "@datorama/akita"
+  }
 }
