--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,18 +20,20 @@
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
     "@clr/angular": "4.0.2",
+    "@clr/icons": "4.0.2",
+    "@clr/ui": "4.0.2",
+    "@datorama/akita": "^4.22.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@clr/ui": "4.0.2",
-    "@clr/icons": "4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "~0.1001.1",
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "~10.1.1",
+    "@datorama/akita-ngdevtools": "^3.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
