--- a/frontend/src/assets/data/project.json
+++ b/frontend/src/assets/data/project.json
@@ -36,10 +36,10 @@
     "issues": [
         {
             "id": "0",
-            "list": "TODO",
+            "list": "TO DO",
             "category": "Task",
             "listPosition": 1,
-            "priority": "Medium",
+            "priority": "Lowest",
             "title": "Behind the 900 stars - Update 08/2020",
             "description": "<p>I shared some of my technical decisions behind <a href='http://jira.trungk18.com' rel='noopener noreferrer' target='_blank'>jira.trungk18.com</a> on <a href='https://github.com/SingaporeJS/talk.js/issues/40' rel='noopener noreferrer' target='_blank'>Singapore talk.js August 2020</a> with a very catchy title - <strong>Behind the 900 stars repository 😂</strong> Do you like it? <br/></br/> Hopefully I can change the title to a thousand stars soon... 🤣</p><p><br></p><p>Thanks for having me!</p><p><br></p><p>See the slide deck ➡ <a href='https://slides.com/tuantrungvo/behind-the-900-star-repository-jira-clone-angular' rel='noopener noreferrer' target='_blank' style='background-color: rgb(255, 255, 255);'>https://slides.com/tuantrungvo/behind-the-900-star-repository-jira-clone-angular</a></p><p><br></p><p><img src='https://pbs.twimg.com/media/EgWe01qUcAIoNdi?format=jpg&amp;name=large' alt='Image'></p><p><br></p><p><br></p>",
             "createdAt": "2020-08-27T14:23:38.183Z",
@@ -49,7 +49,7 @@
         },
         {
             "id": "1",
-            "list": "TODO",
+            "list": "TO DO",
             "category": "Wiki",
             "listPosition": 2,
             "priority": "Medium",
@@ -66,6 +66,7 @@
             "category": "Wiki",
             "listPosition": 1,
             "priority": "High",
+            "title": "How to build Jira clone 😍? Follow these tutorials from its author",
             "description": "<h3>I have prepared a set of tutorial for some major components of Jira clone, feel free to take a look! More to come, the tutorials will have at least 10 posts 😊😊😊</h3><p><br></p><ol><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-00-prerequisites/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Prerequisites</a></li><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-01-planning-and-set-up/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Create a new repository and set up a new Angular application with CLI</a></li><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-02-application-layout-tailwindcss-flex/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Build the application layout with flex and TailwindCSS</a></li><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-03-akita-state-management/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Setup Akita state management</a></li><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-04-editable-textbox/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Build an editable textbox</a></li><li><a href=\"https://trungk18.com/experience/angular-jira-clone-tutorial-05-interactive-drag-and-drop-board/\" rel=\"noopener noreferrer\" target=\"_blank\" style=\"color: rgb(3, 102, 214);\">Build an interactive drag and drop board</a></li></ol>",
             "createdAt": "2020-09-15T23:41:37.278Z",
             "updatedAt": "2020-09-15T23:41:37.278Z",
