--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "@clr/ui": "4.0.2",
     "@datorama/akita": "^4.22.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "ngx-quill": "^12.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
